samples/_failures_safe/1761329444_befaea_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3c6e867b.c: In function ‘main’:
./samples/SAFE/__tmp_3c6e867b.c:172:5: error: expected declaration or statement at end of input
  172 |     printf("\n");
      |     ^~~~~~
